Fix tournaments in dark mode

--- a/style/client.css
+++ b/style/client.css
@@ -1395,13 +1395,16 @@ a.ilink.yours {
 	border-width: 0;
 }
 .tournament-bracket-table-cell-result-win {
-	background-color: rgba(0, 255, 0, 0.2)
+	background-color: rgba(128, 196, 128, 0.7);
+	color: black;
 }
 .tournament-bracket-table-cell-result-draw {
-	background-color: rgba(255, 255, 0, 0.2)
+	background-color: rgba(255, 196, 128, 0.7);
+	color: black;
 }
 .tournament-bracket-table-cell-result-loss {
-	background-color: rgba(255, 0, 0, 0.2)
+	background-color: rgba(255, 128, 128, 0.7);
+	color: black;
 }
 
 .tournament-bracket-tree-link {
@@ -1414,20 +1417,24 @@ a.ilink.yours {
 }
 .tournament-bracket-tree-node > rect {
 	/* Note: Due to SVG limitations, dimensions and border radii are in client-chat-tournament.js (nodeSize) */
-	fill: rgba(74, 77, 80, 0.2);
+	fill: rgba(178, 194, 210, 0.7);
 	stroke: rgba(74, 77, 80, 0.7);
+	color: black;
 }
 .tournament-bracket-tree-node-win > rect {
-	fill: rgba(0, 128, 0, 0.2);
+	fill: rgba(128, 196, 128, 0.7);
 	stroke: rgba(0, 128, 0, 0.7);
+	color: black;
 }
 .tournament-bracket-tree-node-draw > rect {
-	fill: rgba(255, 128, 0, 0.2);
+	fill: rgba(255, 196, 128, 0.7);
 	stroke: rgba(255, 128, 0, 0.7);
+	color: black;
 }
 .tournament-bracket-tree-node-loss > rect {
-	fill: rgba(255, 0, 0, 0.2);
+	fill: rgba(255, 128, 128, 0.7);
 	stroke: rgba(255, 0, 0, 0.7);
+	color: black;
 }
 .tournament-bracket-tree-node > text {
 	font-size: 0.8em;
